removed scantum and add passport in replace of that. Added refresh token api and added on swagger api doc
